--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,61 +5,12 @@
     <string name="club_name_null">None</string>
     <string name="club_desc_null">No Detail</string>
 
-    <string-array name="club_name">
-        <item>Barcelona FC</item>
-        <item>Real Madrid FC</item>
-        <item>Bayern Munchen FC</item>
-        <item>Manchester City FC</item>
-        <item>Manchester United FC</item>
-        <item>Chelsea FC</item>
-        <item>AC Milan FC</item>
-        <item>Arsenal FC</item>
-    </string-array>
-
-    <string-array name="club_image">
-        <item>@drawable/img_barca</item>
-        <item>@drawable/img_madrid</item>
-        <item>@drawable/img_bayern</item>
-        <item>@drawable/img_city</item>
-        <item>@drawable/img_mu</item>
-        <item>@drawable/img_chelsea</item>
-        <item>@drawable/img_acm</item>
-        <item>@drawable/img_arsenal</item>
-    </string-array>
-
-    <string-array name="club_detail">
-        <!--Barcelona FC-->
-        <item>Founded in 1899 by a group of Swiss, English and Catalan footballers led by Joan Gamper, the club has become a symbol of Catalan culture and Catalanism,
-            hence the motto \"Mes que un club\" (\"More than a club\"). Unlike many other football clubs, the supporters own and operate Barcelona.
-            It is the third most valuable sports team in the world, worth USD 4.07 billion, and the world\'s third richest football club in terms of revenue,
-            with an annual turnover of Euro648.3 million. The official Barcelona anthem is the \"Cant del Barca\", written by Jaume Picas and Josep Maria Espinas.</item>
-        <!--Real Madrid FC-->
-        <item>Founded on 6 March 1902 as the Madrid Football Club, the club has traditionally worn a white home kit since inception.
-            The word real is Spanish for "royal" and was bestowed to the club by King Alfonso XIII in 1920 together with the royal crown in the emblem.
-            The team has played its home matches in the 81,044-capacity Santiago Bernabeu Stadium in downtown Madrid since 1947.
-            Unlike most European sporting entities, Real Madrid\'s members (socios) have owned and operated the club throughout its history.</item>
-        <!--Bayern Munchen FC-->
-        <item>FC Bayern was founded in 1900 by 11 football players, led by Franz John. Although Bayern won its first national championship in 1932,
-            the club was not selected for the Bundesliga at its inception in 1963. The club had its period of greatest success in the middle of the 1970s when,
-            under the captaincy of Franz Beckenbauer, it won the European Cup three times in a row (1974–1976).</item>
-        <!--Manchester City FC-->
-        <item>Manchester City Football Club, commonly known as City, is a football club in Manchester, England.
-            Founded in 1880 as St. Mark\'s (West Gorton), it became Ardwick Association Football Club in 1887 and Manchester City in 1894.
-            The club\'s home ground is the City of Manchester Stadium in east Manchester, to which it moved in 2003, having played at Maine Road since 1923.</item>
-        <!--MU FC-->
-        <item>Manchester United Football Club, commonly known as Man. United or simply United, is a professional football club based in Old Trafford, Greater Manchester,
-            England, that competes in the Premier League, the top flight of English football. Nicknamed "the Red Devils",
-            the club was founded as Newton Heath LYR Football Club in 1878, changed its name to Manchester United in 1902 and moved to its current stadium,
-            Old Trafford, in 1910.</item>
-        <!--Chelsea FC-->
-        <item>Chelsea Football Club is a professional football club in London, England, that competes in the Premier League. Founded in 1905,
-            the club\'s home ground since then has been Stamford Bridge.</item>
-        <!--AC Milan FC-->
-        <item>Associazione Calcio Milan, commonly referred to as A.C. Milan or simply Milan, is a professional football club in Milan, Italy, founded in 1899.
-            The club has spent its entire history, with the exception of the 1980–81 and 1982–83 seasons, in the top flight of Italian football, known as Serie A since 1929–30.</item>
-        <!--Arsenal FC-->
-        <item>Arsenal Football Club is a professional football club based in Islington, London, England, that plays in the Premier League, the top flight of English football.
-            The club has won 13 League titles, a record 13 FA Cups, two League Cups, the League Centenary Trophy,
-            15 FA Community Shields, one UEFA Cup Winners\' Cup and one Inter-Cities Fairs Cup.</item>
+    <string-array name="league">
+        <item>English Premier League</item>
+        <item>English League Championship</item>
+        <item>German Bundesliga</item>
+        <item>Italian Serie A</item>
+        <item>French Ligue 1</item>
+        <item>Spanish La Liga</item>
     </string-array>
 </resources>
