Change some model data to long, refactor and clean code, Mod insert and Add remove features for db, add display to favorites

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="next_match_simple_name">Next Match</string>
     <string name="text_example">Example</string>
     <string name="text_zero">0</string>
-    <string name="text_generic_error">Error</string>
+    <string name="text_generic_error">Something is wrong</string>
     <string name="text_success_add_to_fav">Added to favorites</string>
+    <string name="favorites_simple_name">Favorites</string>
 </resources>
