--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="text_generic_error">Something is wrong</string>
     <string name="text_success_add_to_fav">Added to favorites</string>
     <string name="favorites_simple_name">Favorites</string>
+    <string name="text_success_remove_from_fav">Removed from favorites</string>
 </resources>
