Add team detail activity test, add models player item and player list response, mod network set and activity builder, mod match detail presenter, add player detail view set, mod team detail set, add player list adapter, mod team detail pager adapter, add match list presenter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,10 @@
     </string>
 	<string name="text_overview_team">Overview</string>
 	<string name="text_player_detail">Player</string>
+	<string name="image_stadium">image stadium</string>
+	<string name="dummy_stadium">Stadium</string>
+	<string name="img_player_cutoff">player cutoff image</string>
+	<string name="img_player_detail">image player detail fanart</string>
+	<string name="text_player_height">Height</string>
+	<string name="text_player_weight">Weight</string>
 </resources>
